# django-sssoon

./: .gitignore  .pypirc  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
django_sssoon.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: README.md
sssoon/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
sssoon/migrations/: 0001_initial.py  0002_alter_mailinglist_id.py
sssoon/static/sssoon/css/: custom.css  style.default.css
sssoon/static/sssoon/js/: front.js
sssoon/templates/sssoon/: index.html  sign_up_email_template.txt  video.html
